--- a/soccer.html
+++ b/soccer.html
@@ -95,47 +95,23 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Armenia vs Hungary</a>
-<td>November 13, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 08:00:00" data-start="November 13, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Luxembourg vs Germany</a>
+<td>November 14, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 15, 2025 10:45:00" data-start="November 14, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">North Macedonia vs Lativa</a>
-<td>November 13, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 08:00:00" data-start="November 13, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Poland vs Netherlands</a>
+<td>November 14, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 15, 2025 10:45:00" data-start="November 14, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Norway vs Estonia</a>
-<td>November 13, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 08:00:00" data-start="November 13, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Croatia vs Faroe Islands</a>
+<td>November 14, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 15, 2025 10:45:00" data-start="November 14, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Azerbaijan vs Iceland</a>
-<td>November 13, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 08:00:00" data-start="November 13, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Venezuela vs Australia</a>
+<td>November 14, 2025 18:30 PM</td>
+<td><span class="countdown-timer" data-end="November 15, 2025 17:30:00" data-start="November 14, 2025 18:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Ireland vs Portugal</a>
-<td>November 13, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 10:45:00" data-start="November 13, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">England vs Serbia</a>
-<td>November 13, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 10:45:00" data-start="November 13, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">France vs Ukraine</a>
-<td>November 13, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 10:45:00" data-start="November 13, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Suriname vs El Salvador</a>
-<td>November 13, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 13:00:00" data-start="November 13, 2025 14:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Canada vs Ecuador</a>
-<td>November 13, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 15:30:00" data-start="November 13, 2025 16:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Haiti vs Costa Rica</a>
-<td>November 13, 2025 18:00 PM</td>
-<td><span class="countdown-timer" data-end="November 14, 2025 17:00:00" data-start="November 13, 2025 18:00:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+</tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
