--- a/nba.html
+++ b/nba.html
@@ -119,66 +119,66 @@
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
      Upcoming NBA Events
-   </h2>
-   <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Toronto Raptors vs Cleveland Cavaliers
-       </a>
-      </td>
-      <td>
-       November 13, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 14, 2025 4:00 PM:00" data-start="November 13, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Indiana Pacers vs Phoenix Suns
-       </a>
-      </td>
-      <td>
-       November 13, 2025 6:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 14, 2025 6:00 PM:00" data-start="November 13, 2025 6:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Atlanta Hawks vs Utah Jazz
-       </a>
-      </td>
-      <td>
-       November 13, 2025 6:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 14, 2025 6:00 PM:00" data-start="November 13, 2025 6:00 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Toronto Raptors vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        November 13, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 14, 2025 4:00 PM:00" data-start="November 13, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Indiana Pacers vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        November 13, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 14, 2025 6:00 PM:00" data-start="November 13, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Atlanta Hawks vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 13, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 14, 2025 6:00 PM:00" data-start="November 13, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
@@ -224,6 +224,153 @@
 
         window.onload = startCountdown;
     </script>
+   </div>
+   <h2>
+    NBA Schedule for November 14, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Miami Heat vs New York Knicks
+       </a>
+      </td>
+      <td>
+       November 14, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 4:00 PM:00" data-start="November 14, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Brooklyn Nets vs Orlando Magic
+       </a>
+      </td>
+      <td>
+       November 14, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 4:00 PM:00" data-start="November 14, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Philadelphia 76ers vs Detroit Pistons
+       </a>
+      </td>
+      <td>
+       November 14, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 4:30 PM:00" data-start="November 14, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-4">
+        Portland Trail Blazers vs Houston Rockets
+       </a>
+      </td>
+      <td>
+       November 14, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 5:00 PM:00" data-start="November 14, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-5">
+        Charlotte Hornets vs Milwaukee Bucks
+       </a>
+      </td>
+      <td>
+       November 14, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 5:00 PM:00" data-start="November 14, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-6">
+        Sacramento Kings vs Minnesota Timberwolves
+       </a>
+      </td>
+      <td>
+       November 14, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 5:00 PM:00" data-start="November 14, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-7">
+        Los Angeles Lakers vs New Orleans Pelicans
+       </a>
+      </td>
+      <td>
+       November 14, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 5:00 PM:00" data-start="November 14, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-8">
+        Los Angeles Clippers vs Dallas Mavericks
+       </a>
+      </td>
+      <td>
+       November 14, 2025 5:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 5:30 PM:00" data-start="November 14, 2025 5:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-9">
+        Golden State Warriors vs San Antonio Spurs
+       </a>
+      </td>
+      <td>
+       November 14, 2025 6:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 15, 2025 6:30 PM:00" data-start="November 14, 2025 6:30 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
   </div>
  </body>
 </html>
