--- a/motorsports.html
+++ b/motorsports.html
@@ -96,9 +96,14 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wec">Supercars Championship - Race</a></td>
-<td>November 14, 2025 20:10 PM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 14, 2025 20:10:00"></span>
+<td><a href="https://roxiestreams.live/supercross">FIM World Supercross Championship</a></td>
+<td>November 15, 2025 18:30 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 15, 2025 18:30:00"></span>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/wec">Supercars Championship - Race 2</a></td>
+<td>November 15, 2025 20:20 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 15, 2025 20:20:00"></span>
 </tr>
 <tr>
 </tr></tbody>
