--- a/index.html
+++ b/index.html
@@ -119,18 +119,13 @@
             <tbody>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</td>
-                    <td>November 14, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 14, 2025 09:45:00" data-end="November 31, 2025 23:30:00"></span></td>
+                    <td>November 13, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 13, 2025 09:45:00" data-end="November 31, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-                    <td>November 14, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 14, 2025 17:00:00" data-end="November 31, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/wec">Supercars Championship - Race</a></td>
-                    <td>November 14, 2025 20:10 PM</td>
-                    <td><span class="countdown-timer" data-start="November 14, 2025 20:10:00" data-end="November 31, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (TNF)</a></td>
+                    <td>November 13, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 13, 2025 17:00:00" data-end="November 31, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
