--- a/ufc.html
+++ b/ufc.html
@@ -90,6 +90,7 @@
             <div class="streamchanger">
                 <button class="streambutton" onclick="randomStream1()">Stream 1</button>
                 <button class="streambutton" onclick="randomStream2()">Stream 2</button>
+                <button class="streambutton" onclick="randomStream3()">Stream 3</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -140,6 +141,17 @@
                 "https://600.qiyarmedia.com/ufc2.m3u8",
                 "https://600.pixelcraft.qzz.io/ufc2.m3u8",
                 "https://600.wnion.co.in/ufc2.m3u8"
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 3 Randomizer
+        function randomStream3() {
+            var links = [
+                "https://600.qiyarmedia.com/ufc3.m3u8",
+                "https://600.pixelcraft.qzz.io/ufc3.m3u8",
+                "https://600.wnion.co.in/ufc3.m3u8"
             ];
             var randomLink = links[Math.floor(Math.random() * links.length)];
             showPlayer('clappr', randomLink);
