--- a/ufc.html
+++ b/ufc.html
@@ -92,6 +92,8 @@
                 <button class="streambutton" onclick="randomStream2()">Stream 2</button>
                 <button class="streambutton" onclick="randomStream3()">Stream 3</button>
                 <button class="streambutton" onclick="randomStream4()">Stream 4</button>
+                <button class="streambutton" onclick="randomStream5()">Stream 5</button>
+                <button class="streambutton" onclick="randomStream6()">Stream 6</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -164,6 +166,28 @@
                 "https://600.qiyarmedia.com/ufc4.m3u8",
                 "https://600.pixelcraft.qzz.io/ufc4.m3u8",
                 "https://600.wnion.co.in/ufc4.m3u8"
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 5 Randomizer
+        function randomStream5() {
+            var links = [
+                "https://600.qiyarmedia.com/ufc5.m3u8",
+                "https://600.pixelcraft.qzz.io/ufc5.m3u8",
+                "https://600.wnion.co.in/ufc5.m3u8"
+            ];
+            var randomLink = links[Math.floor(Math.random() * links.length)];
+            showPlayer('clappr', randomLink);
+        }
+
+        // Stream 6 Randomizer
+        function randomStream6() {
+            var links = [
+                "https://600.qiyarmedia.com/ufc6.m3u8",
+                "https://600.pixelcraft.qzz.io/ufc6.m3u8",
+                "https://600.wnion.co.in/ufc6.m3u8"
             ];
             var randomLink = links[Math.floor(Math.random() * links.length)];
             showPlayer('clappr', randomLink);
