--- a/nba.html
+++ b/nba.html
@@ -120,110 +120,110 @@
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
      Upcoming NBA Events
     </h2>
-   <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Memphis Grizzlies vs Cleveland Cavaliers
-       </a>
-      </td>
-      <td>
-       November 15, 2025 2:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 16, 2025 2:00 PM:00" data-start="November 15, 2025 2:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Oklahoma City Thunder vs Charlotte Hornets
-       </a>
-      </td>
-      <td>
-       November 15, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 16, 2025 4:00 PM:00" data-start="November 15, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Toronto Raptors vs Indiana Pacers
-       </a>
-      </td>
-      <td>
-       November 15, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 16, 2025 4:00 PM:00" data-start="November 15, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        Los Angeles Lakers vs Milwaukee Bucks
-       </a>
-      </td>
-      <td>
-       November 15, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 16, 2025 5:00 PM:00" data-start="November 15, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        Denver Nuggets vs Minnesota Timberwolves
-       </a>
-      </td>
-      <td>
-       November 15, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 16, 2025 5:00 PM:00" data-start="November 15, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-  </div>
-  <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-   <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-    <li class="nav-item">
-     <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-      Stream Request (Discord)
-     </a>
-    </li>
-   </ul>
-   <p class="mb-0 text-body-secondary text-center text-lg-start">
-    Roxiestreams © 2024
-   </p>
-  </footer>
-  <script src="js/bootstrap.bundle.min.js">
-  </script>
-  <script>
-   function startCountdown() {
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Memphis Grizzlies vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        November 15, 2025 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 16, 2025 2:00 PM:00" data-start="November 15, 2025 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Oklahoma City Thunder vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        November 15, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 16, 2025 4:00 PM:00" data-start="November 15, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Toronto Raptors vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        November 15, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 16, 2025 4:00 PM:00" data-start="November 15, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Los Angeles Lakers vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        November 15, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 16, 2025 5:00 PM:00" data-start="November 15, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Denver Nuggets vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        November 15, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 16, 2025 5:00 PM:00" data-start="November 15, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+     <li class="nav-item">
+      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+       Stream Request (Discord)
+      </a>
+     </li>
+    </ul>
+    <p class="mb-0 text-body-secondary text-center text-lg-start">
+     Roxiestreams © 2024
+    </p>
+   </footer>
+   <script src="js/bootstrap.bundle.min.js">
+   </script>
+   <script>
+    function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -252,6 +252,139 @@
         }
 
         window.onload = startCountdown;
-  </script>
+   </script>
+   <h2>
+    NBA Schedule for November 16, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Los Angeles Clippers vs Boston Celtics
+       </a>
+      </td>
+      <td>
+       November 16, 2025 12:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 12:30 PM:00" data-start="November 16, 2025 12:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Sacramento Kings vs San Antonio Spurs
+       </a>
+      </td>
+      <td>
+       November 16, 2025 1:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 1:00 PM:00" data-start="November 16, 2025 1:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Brooklyn Nets vs Washington Wizards
+       </a>
+      </td>
+      <td>
+       November 16, 2025 3:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 3:00 PM:00" data-start="November 16, 2025 3:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-4">
+        Orlando Magic vs Houston Rockets
+       </a>
+      </td>
+      <td>
+       November 16, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 4:00 PM:00" data-start="November 16, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-5">
+        Golden State Warriors vs New Orleans Pelicans
+       </a>
+      </td>
+      <td>
+       November 16, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 4:00 PM:00" data-start="November 16, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-6">
+        Portland Trail Blazers vs Dallas Mavericks
+       </a>
+      </td>
+      <td>
+       November 16, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 4:30 PM:00" data-start="November 16, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-7">
+        Atlanta Hawks vs Phoenix Suns
+       </a>
+      </td>
+      <td>
+       November 16, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 5:00 PM:00" data-start="November 16, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-8">
+        Chicago Bulls vs Utah Jazz
+       </a>
+      </td>
+      <td>
+       November 16, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 17, 2025 5:00 PM:00" data-start="November 16, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
+  </div>
  </body>
 </html>
