--- a/nfl.html
+++ b/nfl.html
@@ -236,7 +236,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-8">
-        Los Angeles Rams vs Jacksonville Jaguars
+        Los Angeles Chargers vs Jacksonville Jaguars
        </a>
       </td>
       <td>
