--- a/nfl.html
+++ b/nfl.html
@@ -208,7 +208,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-6">
-        Green Bay Packers vs New York
+        Green Bay Packers vs New York Giants
        </a>
       </td>
       <td>
