--- a/motorsports.html
+++ b/motorsports.html
@@ -96,14 +96,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/supercross">FIM World Supercross Championship</a></td>
-<td>November 15, 2025 18:30 PM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 15, 2025 18:30:00"></span>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/wec">Supercars Championship - Race 2</a></td>
-<td>November 15, 2025 20:20 PM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 15, 2025 20:20:00"></span>
+<td><a href="https://roxiestreams.live/motogp">MotoGP - Pre-Season Testing</a></td>
+<td>November 18, 2025 01:00 AM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 18, 2025 01:30:00"></span>
 </tr>
 <tr>
 </tr></tbody>
