--- a/soccer.html
+++ b/soccer.html
@@ -95,51 +95,26 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Brazil vs Senegal</a>
-<td>November 15, 2025 08:00 AM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 07:00:00" data-start="November 15, 2025 08:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Israel vs Moldova</a>
+<td>November 16, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 17, 2025 10:45:00" data-start="November 16, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Turkey vs Bulgaria</a>
-<td>November 15, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 08:00:00" data-start="November 15, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Italy vs Norway</a>
+<td>November 16, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 17, 2025 10:45:00" data-start="November 16, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Cyprus vs Austria</a>
-<td>November 15, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 08:00:00" data-start="November 15, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Vélez Sarsfield vs River Plate</a>
+<td>November 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 17, 2025 11:00:00" data-start="November 16, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Georgia vs Spain</a>
-<td>November 15, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 08:00:00" data-start="November 15, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">RB Bragantino vs Atlético Mineiro</a>
+<td>November 16, 2025 14:00 PM</td>
+<td><span class="countdown-timer" data-end="November 17, 2025 13:00:00" data-start="November 16, 2025 14:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Switzerland vs Sweden</a>
-<td>November 15, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 10:45:00" data-start="November 15, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Denmark vs Belarus</a>
-<td>November 15, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 10:45:00" data-start="November 15, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Greece vs Scotland</a>
-<td>November 15, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 10:45:00" data-start="November 15, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">USA vs Paraguay</a>
-<td>November 15, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 13:00:00" data-start="November 15, 2025 14:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Santos vs Palmeiras</a>
-<td>November 15, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 15:00:00" data-start="November 15, 2025 16:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Colombia vs New Zealand</a>
-<td>November 15, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 15:30:00" data-start="November 15, 2025 16:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Mexico vs Uruguay</a>
-<td>November 15, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 16, 2025 16:00:00" data-start="November 15, 2025 17:00:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Boca Juniors vs Tigre</a>
+<td>November 16, 2025 15:16 PM</td>
+<td><span class="countdown-timer" data-end="November 17, 2025 14:16:00" data-start="November 16, 2025 15:16:00"></span></td>
+<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
