--- a/nfl-streams-12.html
+++ b/nfl-streams-12.html
@@ -97,10 +97,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/nfl12.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/nflalt.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.xn--l3ca4btt7db.com/nflalty.m3u8')">Stream 3</button>
-            </div>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.qiyarmedia.com/nfl12.m3u8')">Stream 1</button>
+          </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -134,7 +132,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://again.009292.xyz/nfl12.m3u8');
+            showPlayer('clappr', 'https://abigail.qiyarmedia.com/nfl12.m3u8');
         };
     </script>
     <script>
